[package]
name = "amalie"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "0.4.3", features = ["rand"] }
macros = { path = "macros" }
pyo3 = { version = "0.22.0", features = ["extension-module", "num-bigint"], optional = true}
ctrlc = "3.4.4"
rand = "0.8.5"
thiserror = "1.0.63"
primal = "0.3.3"
